ajay worked in company creation list

--- a/hrmsproject/templates/content/master/company_creation/list.html
+++ b/hrmsproject/templates/content/master/company_creation/list.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="dashboard-main-body">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h6 class="fw-bold">Master / <span class="text-muted">Company Creation</span></h6>
+    <h6 class="fw-bold">Master / <span class="text-muted">Company </span></h6>
     <a href="{% url 'master:company_create1' %}" class="btn btn-success">+ New Company</a>
   </div>
 
