--- a/hrmsproject/templates/content/master/company_creation/list.html
+++ b/hrmsproject/templates/content/master/company_creation/list.html
@@ -18,7 +18,7 @@
           <input type="text" name="q" value="{{ query }}" class="form-control" placeholder="Company or billing name">
         </div>
         <div class="col-md-3 col-lg-2">
-          <label class="form-label">Status update</label>
+          <label class="form-label">Status</label>
           <select name="status" class="form-select">
             <option value="">All</option>
             <option value="Active" {% if status_filter == 'Active' %}selected{% endif %}>Active</option>
