changes in entry

--- a/hrmsproject/entry/templates/entry/permission_entry/create.html
+++ b/hrmsproject/entry/templates/entry/permission_entry/create.html
@@ -25,8 +25,8 @@
 
           <!-- Employee Name -->
           <div class="col-md-6">
-            <label class="form-label">Employee Name</label>
-            <input type="text" class="form-control" value="Praveena S - ZGESPL/465" readonly>
+            <label class="form-label">Employee Name<span class="text-danger">*</label>
+            <input type="text" class="form-control" >
           </div>
 
           <!-- Permission Date -->
