--- a/hrmsproject/entry/templates/entry/permission_entry/list.html
+++ b/hrmsproject/entry/templates/entry/permission_entry/list.html
@@ -12,8 +12,7 @@
       <h6 class="mb-3 fw-bold text-secondary">Entry / <span class="text-dark">Permission Entry </span></h6>
         <!-- Link to Create Page -->
       <div>
-       {% url 'permission_entry_create' as permission_entry_create_url %}
-       <a href="{{ permission_entry_create_url|default:'#' }}" class="btn btn-success btn-create text-nowrap">+ Create</a>
+       <a href="{% url 'entry:permission_entry_create' %}"  class="btn btn-success btn-create text-nowrap">+ Create</a>
        </div>
     </div>
 
